[package]
name = "salad-calculator"
version = "0.1.0"
description = "Algorithm to calculate word salads, written in Rust, ported to Node"
authors = ["henryk1229"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zspell = "0.3.3"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
